force-app/main/default/objects/Recruitment__c/Recruitment__c.object-meta.xml
<CustomObject>
    <label>Recruitment</label>
    <nameField>
        <label>Recruitment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>