force-app/main/default/objects/Recruitment__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>fields</label>
    <type>AutoNumber</type>
</CustomField>