force-app/main/default/objects/Recruitment__c/fields/Recruitment_type__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_type__c</fullName>
    <label>Recruitment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sales team</fullName>
            </value>
            <value>
                <fullName>service team</fullName>
            </value>
            <value>
                <fullName>marketing team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>