force-app/main/default/objects/Recruitment__c/fields/Working_area__c.field-meta.xml
<CustomField>
    <fullName>Working_area__c</fullName>
    <label>Working area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vizag</fullName>
            </value>
            <value>
                <fullName>hyderabad</fullName>
            </value>
            <value>
                <fullName>warangal</fullName>
            </value>
            <value>
                <fullName>chennai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>